# top4blockchains

./: .gitignore  Makefile  README.md  blockchain_papers_2025.md  pyproject.toml
config/: author_aliases.yaml  keywords.yaml  manual_overrides.yaml
data/2025/: classified.yaml  papers.yaml
data/2025/raw/: ccs.json  ndss.json  sp.json  uss.json
output/2025/: authors.md  papers.md
scripts/: __init__.py  classify.py  conferences.py  fetch.py  normalize.py  render.py  stats.py
tests/: test_classify.py  test_fetch.py  test_normalize.py  test_pipeline_2025.py
